syntax = "proto3";

package appuser.middleware.role.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/appuser/middleware/v1/role";

import "basetypes/v1/conds.proto";

message RoleReq {
  optional uint32 ID = 9;
  optional string EntID = 10;
  optional string AppID = 20;
  optional string CreatedBy = 30;
  optional string Role = 40;
  optional string Description = 50;
  optional bool Default = 60;
  optional bool Genesis = 70;
}

message Role {
  // Base info
  // @inject_tag: sql:"id"
  uint32 ID = 9;
  // @inject_tag: sql:"ent_id"
  string EntID = 10;
  // @inject_tag: sql:"created_by"
  string CreatedBy = 20;
  // @inject_tag: sql:"role"
  string Role = 30;
  // @inject_tag: sql:"description"
  string Description = 40;
  // @inject_tag: sql:"default"
  bool Default = 60;
  // @inject_tag: sql:"app_id"
  string AppID = 70;
  // @inject_tag: sql:"app_name"
  string AppName = 80;
  // @inject_tag: sql:"app_logo"
  string AppLogo = 90;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 100;
  // @inject_tag: sql:"genesis"
  bool Genesis = 120;
}

message Conds {
  optional basetypes.v1.Uint32Val ID = 9;
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringVal AppID = 20;
  optional basetypes.v1.StringVal CreatedBy = 30;
  optional basetypes.v1.StringVal Role = 40;
  optional basetypes.v1.BoolVal Default = 50;
  optional basetypes.v1.StringSliceVal Roles = 60;
  optional basetypes.v1.BoolVal Genesis = 70;
  optional basetypes.v1.StringSliceVal EntIDs = 80;
  optional basetypes.v1.StringSliceVal AppIDs = 90;
}

